# openai-agents-streaming-api

./: .env.example  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  cli  fnox.toml  pyproject.toml
src/api/: main.py
src/api/routers/: README.md  assistant.py  chat.py  hdi_pdf_analyzer.py  helper.py  orchestrator.py  research.py
src/api/tests/: test_hdi_pdf_analyzer.py
src/api/utils/: agent_router.py  logging.py  session_utils.py
src/chat_agent/: main.py
src/deep_research_agent/: __init__.py  config.py  mcp.py  models.py  orchestrator.py  tools.py
src/deep_research_agent/agents/: __init__.py  clarification_agent.py  compression_agent.py  final_report_agent.py  research_brief_agent.py  researcher_agent.py  supervisor_agent.py
src/markdown_agents/: README.md  __init__.py  builder.py  loader.py  usage_example.py
src/markdown_agents/examples/: README.md  analyzer_agent.md  analyzer_agent.yaml  helper_agent.md  helper_agent.yaml  orchestrator.md  orchestrator.yaml
src/markdown_agents/tests/: __init__.py  test_markdown_agents.py
src/research_bot/: manager.py
src/research_bot/agents/: planner_agent.py  writer_agent.py
src/skills_agents/: README.md  __init__.py  builder.py  cli.py  discovery.py  loader.py  models.py  validator.py
src/skills_agents/examples/: agents.yaml
src/skills_agents/schemas/: __init__.py  hdi_pdf_analyzer.py
src/skills_agents/tests/: __init__.py  test_builder.py  test_discovery.py  test_hdi_integration.py  test_hdi_output_models.py  test_hdi_sample_values.py  test_loader.py  test_models.py  test_skill_runner.py  (+1 more)
(+8 files in other folders)
